# zeal-minigolf

./: CMakeLists.txt  README.md
assets/: minigolf.aseprite  minigolf.tmx  minigolf.tsx
src/: assets.c  assets.h  config.h  course.c  course.h  hud.c  hud.h  input.c  input.h  main.c  main.h  objects.c  objects.h
tools/: gen_course_assets.py
